@startuml

enum ActivityType{
GOAT_SELL:广告售卖
GOAT_LED:led活动
}

note left of ActivityType:活动类别

abstract class ActivityTerm{
+<T extends ActivityVO> Long throwActivity(T activity) //投放广告
+void modify(ActivityType type,Date start,Date end) //修改期次
+<T extends Activity> T selActivityByKey(String key)
+<T extends ActivityVO> T selActivitys()
}

class ActivityTermVO{
-Date startTime
-Date endTime
-Long termId
-ActivityType activityType
}

note left of ActivityTerm:活动期次

interface Activity{
boolean limit(Object... param) //活动限制
Long joinActivity(Long userId,Long shopId,String name,String phone) //参加活动
List<ActivityEnlistVO> randomHit(Integer number) //随机命中
List<ActivityEnlistVO> selEnlist(int hitType) //查询报名列表
}

note left of Activity:投放的活动,\n一期里面可能\n投放多个活动

abstract class GoatActivity{
 void addGoat(GoatSimpleVO goat)
}

class ActivityVO{
-Long activityId  //投放ID
-Long termId   //期次
-String description //描述
-Integer sort  //排序
}

class GoatActivityVO{
-Long localId
-String code
-List<GoatSimpleVO> goats
}

class GoatSimpleVO{
-Long goatId
-Date pubFromTime  //公布时间
-Date pubToTime   //公布结束时间
}

abstract class LedActivity{
}

class LedActivityVO{
-Date givePicTime
-Date endGivePicTime
-Date pubFromTime  //公布时间
-Date pubToTime   //公布结束时间
}

abstract class ActivityEnlist{
+void hit() //报名命中
+void unhit() //取消命中
}

class ActivityEnlistVO{
-Long enId
-Long userId
-Long shopId
-Long activityId
-String name
-String telephone
}

interface ActivityFactory{
ActivityTerm addAndGetTerm(ActivityTermVO vo) //添加并取得一期
ActivityTerm selTermByTime(ActivityType type,Date time) //按时间查有效期次
ActivityTerm selTermById(Long termId) //按期ID查某一期次
Activity selActivityById(Long activityId) //按期次ID查投放的广告
Activity selActivityByVo(ActivityVO vo) //按期次ID查投放的广告
ActivityEnlist selEnlistById(Long enlistId) //按广告投放ID查报名单
ActivityEnlist selEnlistByVo(ActivityEnlistVO vo) //按广告投放ID查报名单

}

note left of ActivityFactory:活动服务接口
Activity <|.. GoatActivity

Activity <|.. LedActivity

ActivityTerm *-- Activity

ActivityTermVO <|--ActivityTerm

GoatActivity <--> ActivityEnlist
LedActivity <--> ActivityEnlist
ActivityFactory --o ActivityEnlistVO
ActivityFactory --o ActivityVO
ActivityVO <|-- LedActivityVO
ActivityVO <|-- GoatActivityVO

LedActivityVO <|-- LedActivity
GoatActivityVO <|-- GoatActivity
ActivityEnlist --|> ActivityEnlistVO
@enduml